--- a/.github/workflows/check_links.yml
+++ b/.github/workflows/check_links.yml
@@ -31,7 +31,7 @@ jobs:
       env:
         LIJIANGAPI_TOKEN: ${{ secrets.LIJIANGAPI_TOKEN }}
         PROXY_URL: ${{ secrets.PROXY_URL }}
-      run: python test-friend.py
+      run: python test-friend-in-txt.py
 
     - name: Configure git
       run: |
